--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,11 @@
 h1 {
   text-align: center;
 }
+
+.oscuro {
+  background-color: #fff;
+  filter: invert(1) hue-rotate(180deg);
+}
+.aux {
+  filter: invert(1) hue-rotate(180deg);
+}
